--- a/src/app/ui/globals.scss
+++ b/src/app/ui/globals.scss
@@ -18,12 +18,23 @@ body {
     background-color: #131921;
     width: 100%;
     position: relative;
+    display: flex;
+    align-items: center;
+
+    .nav-search{
+        display: flex;
+    }
+
 
     .nav-logo {
     height:30px;
     width: auto;
     padding: 9px;
     padding-top: 18px;
+    }
+
+    .search-box{
+        height: 28px;
     }
 
 }
