fixed full width search bar with flex-grow

--- a/src/app/ui/globals.scss
+++ b/src/app/ui/globals.scss
@@ -27,18 +27,24 @@ body {
     padding: 9px;
     padding-top: 18px;
     }
-
+    form {
+        flex: 1;
+    }
     .nav-search{
         display: flex;
+        width: 100%;
+       
     }
-
     .search-left {
        background-color: red;
     }
 
     .search-box{
         height: 28px;
+        width: 100%;
+        
     }
 
 }
+
 
