added magnifying element to search bar

--- a/src/app/ui/globals.scss
+++ b/src/app/ui/globals.scss
@@ -41,8 +41,15 @@ body {
 
     .search-box{
         height: 28px;
-        width: 100%;
+        width: 80%;
         
+    }
+    .search-right {
+        height: 28px;
+        background-color: #febd69;
+    }
+    .magnifying-glass {
+        height: 28px;
     }
 
 }
