--- a/src/app/ui/globals.scss
+++ b/src/app/ui/globals.scss
@@ -65,16 +65,19 @@ body {
         width: 100%;
        
     }
-    .search-left {
+    .select-left {
        
          height: 28px;
          border: 0;
-         background-color: #D4D4D4;
+         background-color: #E6E6E6;
          border-radius: 3px 0px 0px 3px;
          padding-left: 5px;
          &:focus {
             outline: 0;
           }
+          &:hover {
+            background-color: #D4D4D4;
+              }
     }
 
     .search-box{
@@ -110,6 +113,19 @@ body {
 
     }
 
+    .flags-container {
+       display: flex;
+       justify-content: flex-end;
+       padding-left: 15px;
+       font-weight: 700;
+margin-top: 5px;
+    }
+
+    .flag {
+        height: 15px;
+        padding-right: 4px;
+    }
+
     .cart-container {
        display: flex;
     }
@@ -127,7 +143,7 @@ body {
 
     .cart {
         height: 30px;
-        padding-left: 10px;
+        padding-left: 12px;
     }
 
 }
