--- a/src/app/ui/globals.scss
+++ b/src/app/ui/globals.scss
@@ -23,12 +23,14 @@ body {
     color: #fff;
     font-size: 12px;
 
-    .location-container {
+    .nav-text-container {
         display: flex;
         // width: fit-content;
-    
+    &.accounts {
+        padding-left: 12px;
     }
-    .delivery-text {
+    }
+    .nav-innertext-container {
        display: flex;
        flex-direction: column;
        white-space: nowrap;
@@ -37,12 +39,13 @@ body {
 
     }
 
-    .deliveryline-1 {
+    .line-1 {
         font-weight: 400;
         line-height: 110%;
     }
-    .deliveryline-2 {
+    .line-2 {
         font-weight: 700;
+        font-size: 14px;
     }
 
     .pin {
@@ -139,11 +142,6 @@ body {
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
-       font-weight: 700;
-     }
-
-     .cartline-2 {
-       font-size: 14px;
      }
 
     .cart {
