--- a/src/app/ui/globals.scss
+++ b/src/app/ui/globals.scss
@@ -22,6 +22,7 @@ body {
     align-items: center;
     color: #fff;
     font-size: 12px;
+    padding: 0px 20px;
 
     .nav-text-container {
         display: flex;
@@ -110,7 +111,7 @@ body {
     }
     .magnifying-glass {
         height: 13px;
-        padding: 0 5px;
+        padding: 0 8px;
         transform: scaleX(-1);
 
 
@@ -120,17 +121,17 @@ body {
        display: flex;
        justify-content: flex-end;
        padding-left: 15px;
-       font-weight: 700;
        margin-top: 5px;
     }
 
     .flag {
         height: 15px;
-        padding-right: 4px;
+        padding-right: 2px;
     }
     .language-select {
         border: 0;
         color: #fff;
+        font-weight: 700;
         background-color: transparent;
     }
 
@@ -146,7 +147,7 @@ body {
 
     .cart {
         height: 30px;
-        padding-left: 12px;
+
     }
 
 }
