--- a/src/app/ui/globals.scss
+++ b/src/app/ui/globals.scss
@@ -22,7 +22,7 @@ body {
     align-items: center;
     color: #fff;
     font-size: 12px;
-    padding: 0px 20px;
+   // padding: 0px 20px;
 
     .nav-text-container {
         display: flex;
@@ -71,7 +71,8 @@ body {
     }
     .select-left {
        
-         height: 28px;
+         height: 35px;
+         width: 60px;
          border: 0;
          background-color: #E6E6E6;
          border-radius: 3px 0px 0px 3px;
@@ -85,7 +86,7 @@ body {
     }
 
     .search-box{
-        height: 28px;
+        height: 35px;
         width: 100%;
         border: 0;
         padding: 0;
@@ -99,7 +100,7 @@ body {
         
     }
     .search-right {
-        height: 28px;
+        height: 35px;
         background-color: #febd69;
         display: flex;
         align-items: center;
@@ -111,7 +112,7 @@ body {
     }
     .magnifying-glass {
         height: 13px;
-        padding: 0 8px;
+        padding: 0 10px;
         transform: scaleX(-1);
 
 
@@ -146,8 +147,24 @@ body {
      }
 
     .cart {
-        height: 30px;
+        height: 37px;
+    }
 
+    .align-number-cart {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+    }
+    .cart-number {
+        color: #F08806;
+        position: absolute;
+        font-weight: 700;
+         top: 11px;
+          left: 18px;
+    }
+    .cartline-1 {
+        visibility: hidden;
     }
 
 }
