--- a/src/app/ui/globals.scss
+++ b/src/app/ui/globals.scss
@@ -14,6 +14,7 @@ body {
     margin: 0;
 }
 
+
 .navbar {
     background-color: #131921;
     width: 100%;
@@ -42,10 +43,15 @@ body {
     .line-1 {
         font-weight: 400;
         line-height: 110%;
+
+        &.delivery {
+            color: #CCCCCC;
+        }
     }
     .line-2 {
         font-weight: 700;
         font-size: 14px;
+        line-height: 110%;
     }
 
     .pin {
