--- a/src/app/ui/globals.scss
+++ b/src/app/ui/globals.scss
@@ -77,8 +77,9 @@ body {
     .select-left {
        
          height: 35px;
-         width: 60px;
+       width: auto;
          border: 0;
+         width: 200px;
          background-color: #E6E6E6;
          border-radius: 3px 0px 0px 3px;
          padding-left: 5px;
@@ -88,6 +89,7 @@ body {
           &:hover {
             background-color: #D4D4D4;
               }
+
     }
     .search-box{
         height: 35px;
